# gealach

./: .directory  .gitignore  CMakeLists.txt  Changelog  Makefile  README.md  install.sh  install_local.sh  mkzip  setup  update
package/: Changelog  metadata.desktop
package/contents/code/: lunacalc.js
package/contents/config/: config.qml  main.xml
package/contents/locale/: Messages.sh  howto.txt
package/contents/locale/translations/: CMakeLists.txt  org.kde.plasma.userbase.gealach.pot  org.kde.plasma.userbase.gealach_de.mo  org.kde.plasma.userbase.gealach_de.po  org.koffeinfriedhof.gealach.pot  org.koffeinfriedhof.gealach_de.mo  org.koffeinfriedhof.gealach_de.po  org.koffeinfriedhof.gealach_fr.mo  org.koffeinfriedhof.gealach_fr.po
package/contents/ui/: PhasesPopup.qml  cfgAbout.qml  cfgColors.qml  cfgIcon.qml  cfgPopup.qml  main.qml
po/: CMakeLists.txt  Messages.sh  howto.txt  plasma_applet_org.koffeinfriedhof.gealach.pot  plasma_applet_org.koffeinfriedhof.gealach_de.mo  plasma_applet_org.koffeinfriedhof.gealach_de.po  plasma_applet_org.koffeinfriedhof.gealach_es.mo  plasma_applet_org.koffeinfriedhof.gealach_es.po  plasma_applet_org.koffeinfriedhof.gealach_fr.mo  plasma_applet_org.koffeinfriedhof.gealach_fr.po
